ran convert-to-flat-config nx generator

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "~16.2.0",
     "@angular/language-service": "~16.2.0",
+    "@eslint/eslintrc": "^2.1.1",
+    "@eslint/js": "~8.46.0",
     "@nx/cypress": "16.10.0",
     "@nx/eslint-plugin": "16.10.0",
     "@nx/jest": "16.10.0",
